05.deployment/03.istio/05.retries/deployment-mouse-reviews.yaml
apiVersion: v1
kind: Service
metadata:
  name: mouse-reviews
  labels:
    app: mouse-reviews
    version: v1
spec:
  ports:
    - port: 8081
      name: http
      targetPort: 8080
  selector:
    app: mouse-reviews
    version: v1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mouse-reviews
    version: v1
  name: mouse-reviews
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mouse-reviews
      version: v1
  template:
    metadata:
      labels:
        app: mouse-reviews
        version: v1
    spec:
      containers:
        - name: mouse-reviews
          image: mouse-reviews:v1
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
              protocol: TCP
